@@ -1,5 +1,6 @@
 12/11/15
   -Fixed incorrect vendorID's in identify.py
+  -Filter out garbage from GetTagList
 
 11/28/15
   -Renamed SetIPAddress to IPAddress and SetProcessorSlot to ProcessorSlot
